--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [[headers]]
     for  ="/*"
     [headers.values]
+    Content-Security-Policy = "default-src https: 'unsafe-inline'"
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
-    X-Xss-Protection = "1; mode=block;"
-    Referrer-Policy = "origin"
+    X-Xss-Protection = "1; mode=block"
+    Referrer-Policy = "no-referrer"
